# cppcfw

./: CMakeLists.txt  cached.cc  func.sub.cc  indir.cc
bench/: CMakeLists.txt  benchutils.h  config.h.in  dumb.cc  hiter.cc  main.cc  pimpl.cc
bench/hiter/: hiter-cached.sub.cc  hiter-cached.sub.h  hiter-indir.sub.cc  hiter-indir.sub.h  hiter.cc  hiter.sub.cc  hiter.sub.h
bench/pimpl/: pimpl.cc  pimpl.sub-static.cc  pimpl.sub-static.h  pimpl.sub.cc  pimpl.sub.h
bench/reg/: reg.cc  reg.sub.cc  reg.sub.h
reg/: pod.cc
src/cppcfwv0/: hiter-inl.h  hiter.h  pimpl-inl.h  pimpl-static-inl.h  pimpl-static.h  pimpl.h  reg-inl.h  reg.h  sfinae.h  strfwd.h  utils.h
src/cppcfwv0/config/: config.h.in
tests/: CMakeLists.txt  config.h.in  dumb.cc
tests/hiter/: 1dir.cc  1dir.sub.cc  1dir.sub.h  2dir.cc  2dir.sub.cc  2dir.sub.h  cached.sub.cc  cached.sub.h  const.cc  const.sub.cc  const.sub.h  hiter.cc  indir.sub.cc  indir.sub.h  iters.sub.cc  iters.sub.h  str.cc  str.sub.cc  str.sub.h
tests/pimpl/: 0.cc  0.sub.cc  0.sub.h  2.cc  2.sub.cc  2.sub.h  cpmv.cc  cpmv.sub.cc  cpmv.sub.h  pimpl.cc
tests/pimpl-static/: 0.sub.cc  0.sub.h  2.sub.cc  2.sub.h  cpmv.sub.cc  cpmv.sub.h  pimpl.cc
tests/pimplstatic/: 1.cc  1.sub.cc  1.sub.h  cpmv.cc  cpmv.sub.cc  cpmv.sub.h
tests/reg/: func.cc  func.sub.cc  func.sub.h  pod.cc  pod.sub.cc  pod.sub.h  reg.cc  reg.sub.cc  reg.sub.h
